[workspace]
members = ["programs/*", "mini-repro"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Override borsh family to v1.6.0 (uses syn v2) to avoid syn v1/v2 split
borsh = { git = "https://github.com/near/borsh-rs", tag = "1.6.0" }
borsh-derive = { git = "https://github.com/near/borsh-rs", tag = "1.6.0" }
borsh-derive-internal = { git = "https://github.com/near/borsh-rs", tag = "1.6.0" }
borsh-schema-derive-internal = { git = "https://github.com/near/borsh-rs", tag = "1.6.0" }


